additional inner pages has been added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
         <div class="row justify-content-between align-items-center top-header">
           <div class="col-5 mini-logo">
-            <a href="#">
+            <a href="./index.html">
               <div class="image-wrapper">
                 <img src="./assets/img/logo-mini.webp" alt="logo of company" />
               </div>
@@ -81,24 +81,24 @@
                     Xidmətlər
                   </a>
                   <div class="menu services d-flex" data-toggle="services-menu">
-                    <div class="col-4 gray-bg">
+                    <div class="col-4 lightgray-bg">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
                         <a
-                          href="#"
+                          href="./services-advisory.html"
                           class="primary hover-cc sub-act"
                           data-toggle="advisory-menu"
                           >Məsləhət Xidmətləri</a
                         >
                         <a
-                          href="#"
+                          href="./services-accountment.html"
                           class="primary hover-cc sub-act"
                           data-toggle="assurance-menu"
                           >Muhasibatlıq Xidmətləri</a
                         >
                         <a
-                          href="#"
+                          href="./services-tax.html"
                           class="primary hover-cc sub-act"
                           data-toggle="tax-menu"
                           >Vergi Xidmətləri</a
@@ -107,19 +107,21 @@
                     </div>
 
                     <div
-                      class="col-8 advisory-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 advisory-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Məsləhət xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-advisory-1.html"
+                            class="primary hover-cc"
                             >Xarici ticarət və gömrük xidmətləri</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -146,29 +148,33 @@
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="col-8 assurance-menu sub-menu lightgray-bg d-flex"
-                    >
-                      <div class="col-4">
+                    <div class="col-8 assurance-menu sub-menu gray-bg d-flex">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Muhasibatlıq xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-1.html"
+                            class="primary hover-cc"
                             >Muhasibat uçotunun aparılması üzrə autsors
                             xidməti</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-2.html"
+                            class="primary hover-cc"
                             >Maliyyə uçotunun aparılması üzrə autsors
                             xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-3.html"
+                            class="primary hover-cc"
                             >Şirkət rəhbərliyinə xərclər və gəlirlilik haqqında
                             hesabatların hazırlanması</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -195,29 +201,35 @@
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="col-8 tax-menu sub-menu lightgray-bg d-flex d-none"
-                    >
-                      <div class="col-4">
+                    <div class="col-8 tax-menu sub-menu gray-bg d-flex d-none">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Vergi xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-1.html"
+                            class="primary hover-cc"
                             >Vergi auditi xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-2.html"
+                            class="primary hover-cc"
                             >Vergi məsləhət xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-3.html"
+                            class="primary hover-cc"
                             >Vergi planlaması xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-4.html"
+                            class="primary hover-cc"
                             >Vergi sahəsində sair xidmətlər</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -257,7 +269,7 @@
                     class="menu industries d-flex"
                     data-toggle="services-menu"
                   >
-                    <div class="col-4 gray-bg">
+                    <div class="col-4 lightgray-bg">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
@@ -283,9 +295,9 @@
                     </div>
 
                     <div
-                      class="col-8 advisoryInd-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 advisoryInd-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -315,7 +327,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -343,9 +355,9 @@
                       </div>
                     </div>
                     <div
-                      class="col-8 assuranceInd-menu sub-menu lightgray-bg d-flex"
+                      class="col-8 assuranceInd-menu sub-menu gray-bg d-flex"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -375,7 +387,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -403,9 +415,9 @@
                       </div>
                     </div>
                     <div
-                      class="col-8 taxInd-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 taxInd-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -435,7 +447,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -867,7 +879,6 @@
               <p class="title fs-2-5 fw-600">Connect</p>
               <a href="#">Meet our people</a>
               <a href="#">Contact us</a>
-              <a href="#">Global reach</a>
             </div>
           </div>
           <div class="col-12 col-lg-2 desk-footer">
@@ -875,9 +886,7 @@
               <p class="title fw-600">About</p>
               <a href="./about-us.html">Haqqımızda</a>
               <a href="#">Careers</a>
-              <a href="#">Press</a>
-              <a href="#">Moders slavery statement</a>
-              <a href="#">GPPC</a>
+              <a href="#">Insights</a>
             </div>
           </div>
           <div class="col-12 col-lg-2 desk-footer">
@@ -886,8 +895,6 @@
               <a href="#">Privacy</a>
               <a href="#">Cookie policy</a>
               <a href="#">Disclaimer</a>
-              <a href="#">Site map</a>
-              <a href="#">Unauthorised trademark use</a>
             </div>
           </div>
           <div class="col-12 mobile-footer my-5">
