--- a/services-tax-2.html
+++ b/services-tax-2.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
-  <body>
+  <body >
     <header>
       <div class="container">
         <div class="row justify-content-between align-items-center top-header">
@@ -485,178 +485,157 @@
         </div>
       </div>
     </header>
-    <main>
-      <section id="breadcrumb-about" class="pos-rel">
+    <main class="gray-bg">
+      <section id="service-head" class="pos-rel py-5">
         <div class="container">
-          <div class="row flex-column align-items-around">
-            <div
-              class="mt-5 primary-bg page-location d-flex align-items-center"
-            >
-              <i class="fs-2 white fas fa-home hover-cc"></i>
-              <p class="fs-2 white hover-cc">Why FA Consulting</p>
-            </div>
-            <div class="breadcrumb--title fs-2 white fw-400">GO BEYOND</div>
-            <div class="breadcrumb--text white mt-5">Why FA Consulting</div>
-            <div class="breadcrumb--nav d-flex flex-column flex-lg-row">
-              <a
-                href="./why-fac.html"
-                class="white hover-cc fw-300 my-4 my-lg-0"
-                >Why FA Consulting</a
-              >
-              <a
-                href="./customers.html"
-                class="white hover-cc fw-300 my-4 my-lg-0"
-                >Müştərilərimiz</a
-              >
-              <a href="./team.html" class="white hover-cc fw-300 my-4 my-lg-0"
-                >Komandamız</a
-              >
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="main-info" class="py-5 margin-sec">
-        <div class="container">
-          <div class="row my-5">
-            <div class="col-12">
-              <p class="fw-600 fs-3 main-title">
-                Going beyond is what makes FA Consulting different. And what
-                clients value most.
-              </p>
-              <p class="fw-600 fs-3 main-title my-5">
-                We make business personal.
-              </p>
-              <p class="text fs-2 my-5">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-                a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-                quibusdam sint dolor voluptatem excepturi corporis. Expedita
-                delectus non qui vitae velit omnis corrupti ducimus, quas
-                consequatur sequi blanditiis autem deserunt harum architecto
-                iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-                praesentium ipsam ratione harum!
-              </p>
-
-              <p class="fw-600 fs-3 main-title mt-5">
-                We work at the pace that matters - yours.
-              </p>
-              <p class="text fs-2 my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Accusantium, iure? Fuga vero incidunt vel mollitia tempora.
-                Ratione, omnis dolor fugiat atque deserunt, eligendi veritatis
-                nesciunt labore accusamus ex quod vel minus sed autem at quos
-                praesentium voluptatem voluptatibus rerum beatae animi error
-                consequatur itaque voluptate. Error repudiandae non aliquid
-                modi? Magnam, recusandae inventore. Nisi dolore facilis
-                dignissimos veritatis architecto eligendi, nemo neque quae.
-                Illum, soluta?
-              </p>
-              <p class="fw-600 fs-3 main-title mt-5">
-                We value diverse perspectives.
-              </p>
-              <p class="text fs-2 my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Accusantium, iure? Fuga vero incidunt vel mollitia tempora.
-                Ratione, omnis dolor fugiat atque deserunt, eligendi veritatis
-                nesciunt labore accusamus ex quod vel minus sed autem at quos
-                praesentium voluptatem voluptatibus rerum beatae animi error
-                consequatur itaque voluptate. Error repudiandae non aliquid
-                modi?
-              </p>
-              <p class="fw-600 fs-3 main-title mt-5">
-                We don’t predict the future. We help you shape it.
-              </p>
-              <p class="text fs-2 my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Accusantium, iure? Fuga vero incidunt vel mollitia tempora.
-                Ratione, omnis dolor fugiat atque deserunt, eligendi veritatis
-                nesciunt labore accusamus ex quod vel minus sed autem at quos
-                praesentium voluptatem voluptatibus rerum beatae animi error
-                consequatur itaque voluptate. Error repudiandae non aliquid
-                modi?labore accusamus ex quod vel minus sed autem at quos
-                praesentium voluptatem voluptatibus rerum beatae animi error
-                consequatur itaque voluptate. Error repudiandae non aliquid
-                modi? consequatur itaque voluptate. Error repudiandae non
-                aliquid modi?labore accusamus ex quod vel minus sed autem at
-                quos praesentium voluptatem voluptatibus rerum beatae animi
-                error consequatur itaque voluptate. Error repudiandae non
-                aliquid modi?
-              </p>
-              <p class="fw-600 fs-3 main-title mt-5">
-                We are committed to delivering consistently high quality
-              </p>
-              <p class="text fs-2 my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                quidem pariatur quod nobis iste aut, id officiis accusamus
-                eligendi quae nesciunt! Natus, maxime! Optio minus corrupti
-                commodi deserunt! Similique, unde.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="personel">
-        <div class="contanier-fluid">
           <div class="row">
-            <div class="col-12 col-lg-4 px-0">
-              <div
-                class="personel-card"
-                style="background-image: url('./assets/img/why-fa-1.jpg')"
-              >
-                <div class="personel-card-title white">Services</div>
-                <div class="personel-card-info white mt-5">Audit</div>
-                <div class="personel-card-sub white my-3">
-                  Seasoned practitioners who deliver thoughtful, insightful
-                  options leading to high quality independent audits.
-                </div>
-                <a href="#">
-                  <button class="default-btn btn-w border-w">
-                    Learn about our commitment quality
-                  </button>
-                </a>
-              </div>
-            </div>
-            <div class="col-12 col-lg-4 px-0">
-              <div
-                class="personel-card"
-                style="background-image: url('./assets/img/why-fa-2.jpg')"
-              >
-                <div class="personel-card-title white">Services</div>
-                <div class="personel-card-info white mt-5">Tax</div>
-                <div class="personel-card-sub white my-3">
-                  Knowledgeable professionals who can help our firm clients
-                  assess and manage tax complexities, deal with business
-                  realities, and be ready for the future
-                </div>
-                <a href="#">
-                  <button class="default-btn btn-w border-w">
-                    Understand our tax expertise
-                  </button>
-                </a>
-              </div>
-            </div>
-            <div class="col-12 col-lg-4 px-0">
-              <div
-                class="personel-card"
-                style="background-image: url('./assets/img/why-fa-3.jpg')"
-              >
-                <div class="personel-card-title white">Services</div>
-                <div class="personel-card-info white mt-5">Advisory</div>
-                <div class="personel-card-sub white my-3">
-                  Progressive thinkers who provide operational and transactional
-                  advisory services to enable our clients to create, protect,
-                  and transform value.
-                </div>
-                <a href="#">
-                  <button class="default-btn btn-w border-w">
-                    How our network can help you
-                  </button>
-                </a>
-              </div>
+            <div class=" d-flex align-items-center">
+              <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
+              <p class="fs-1-9 primary hover-cc custom-before me-5">
+                Xidmətlərimiz
+              </p>
+              <p class="fs-1-9 primary hover-cc custom-before">Məsləhət</p>
+              <p class="fs-1-9 primary hover-cc custom-before ms-5">Vergi məsləhət xidmətləri</p>
             </div>
           </div>
         </div>
+      </section>
+      <section id="service-breadcrumb" class="white-bg">
+          <div class="container pos-rel white-bg background ">
+              <div class="row background-height align-items-center">
+                <div class="col-6   fw-600 service-title">Vergi məsləhət xidmətləri</div>
+               
+              </div>
+          </div>
+          </div>
+      </section>
+      <section id="service-panel" class="py-5 mt-5">
+          <div class="container">
+              <div class="row">
+                <div class="col-12 col-lg-2">
+                    <div class="wrapper flex flex-column">
+                        <div class="fs-2-5 my-3">Xidmətlərimiz</div>
+                        <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                            <p class="nav-drop-head primary fw-600 fs-1-9 hover-cc ls-2">
+                                Vergi
+                            </p>
+                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                        </div>
+                        <div class="nav-drop-menu d-flex flex-column my-3">
+                            <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3 left-active"
+                            >Vergi məsləhət xidmətləri</a
+                          >
+                            <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3 "
+                            >Vergi auditi xidmətləri</a
+                          >
+                         
+                          <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3"
+                            >Vergi planlaması xidmətləri</a
+                          >
+                          <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3"
+                            >Vergi sahəsində sair xidmətlər</a
+                          >
+                        </div>
+                        <div class="nav-wrapper d-flex justify-content-between align-items-center mt-3">
+                            <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
+                                Muhasibatlıq
+                            </p>
+                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                        </div>
+                        <div class="nav-drop-menu d-flex flex-column my-3 ">
+                            <a href="./services-accountment-1.html" class="primary hover-cc fs-1-7 fw-600 my-3 "
+                            >Muhasibat uçotunun aparılması üzrə autsors
+                            xidməti</a
+                          >
+                          <a href="./services-accountment-2.html" class="primary hover-cc  fs-1-7 fw-600 my-3"
+                            >Maliyyə uçotunun aparılması üzrə autsors
+                            xidmətləri</a
+                          >
+                          <a href="./services-accountment-3.html" class="primary hover-cc fs-1-7 fw-600 my-3"
+                            >Şirkət rəhbərliyinə xərclər və gəlirlilik haqqında
+                            hesabatların hazırlanması</a
+                          >
+                        </div>
+                        <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                            <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
+                                Məsləhət
+                            </p>
+                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                        </div>
+                        <div class="nav-drop-menu my-3 ">
+                            <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3 "
+                            >Xarici ticarət və   gömrük xidmətləri</a
+                          >
+                        </div>
+
+ 
+                    </div>
+                </div>
+                <div class="col-12 col-lg-7 text-area pl-80">
+                    <p class="fs-2-5 fw-600 my-3">
+                        Staying ahead of disruptive change
+                    </p>
+                    <p class="fs-1-7 fw-600 ls-2 lh-30">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat harum expedita, voluptate ullam nam est totam aut repudiandae maxime earum. Corporis asperiores laboriosam adipisci totam autem omnis beatae nostrum voluptatum?
+                    </p>
+                    <p class="fs-2-5 fw-600 mt-5">
+                        Xarici ticarət
+                    </p>
+                    <p class="fs-1-7 fw-600 ls-2 my-5 lh-30">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas, inventore corporis corrupti amet debitis iste ex ipsum. Neque, tenetur. Nulla consequuntur, alias pariatur eum facere enim vel provident. Laudantium dolorum porro corporis explicabo autem in totam nesciunt quas quia facere non beatae maiores consequuntur assumenda et saepe tempora, inventore dolores est obcaecati labore culpa maxime. Sit in labore sed doloribus ut velit atque cum tempora quas earum repellat quos fuga aut aperiam unde animi ab, aspernatur laudantium dolores sint. Quasi quidem optio et inventore dolor dolorem. Recusandae iste iure fugiat, fugit accusantium tempore excepturi alias quidem soluta, accusamus possimus voluptate vel impedit consequuntur hic harum velit adipisci officia vitae delectus obcaecati. Ducimus voluptatibus magnam voluptates, eveniet dolorum nemo vitae dolore est nulla eaque ad, impedit voluptate sunt. Error explicabo provident natus tempora sequi, cumque omnis totam nesciunt accusamus ipsa delectus nam cupiditate nobis dicta quia facilis? Explicabo, inventore animi?
+                    </p>
+                    <p class="fs-2-5 fw-600 mt-5">
+                        Xarici ticarət
+                    </p>
+                    <p class="fs-1-7 fw-600 ls-2 my-5 lh-30">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas, inventore corporis corrupti amet debitis iste ex ipsum. Neque, tenetur. Nulla consequuntur, alias pariatur eum facere enim vel provident. Laudantium dolorum porro corporis explicabo autem in totam nesciunt quas quia facere non beatae maiores consequuntur assumenda et saepe tempora, inventore dolores est obcaecati labore culpa maxime. Sit in labore sed doloribus ut velit atque cum tempora quas earum repellat quos fuga aut aperiam unde animi ab, aspernatur laudantium dolores sint. Quasi quidem optio et inventore dolor dolorem. Recusandae iste iure fugiat, fugit accusantium tempore excepturi alias quidem soluta, accusamus possimus voluptate vel impedit consequuntur hic harum velit adipisci officia vitae delectus obcaecati. Ducimus voluptatibus magnam voluptates, eveniet dolorum nemo vitae dolore est nulla eaque ad, impedit voluptate sunt. Error explicabo provident natus tempora sequi, cumque omnis totam nesciunt accusamus ipsa delectus nam cupiditate nobis dicta quia facilis? Explicabo, inventore animi?
+                    </p>
+                </div>
+                <div class="col-12 col-lg-3">
+                    <div class="article-card d-flex flex-column ">
+                        <div class="darkgray fs-1-9 ls-2 my-2">GLOBAL HEAD</div>
+                        <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
+                        <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                            <p class="fs-2 hover-cc secondary">Find out more</p>
+                            <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
+                        </a>
+                    </div>
+                    <div class="related-articles ">
+                        <div class="fs-2-5 fw-600 ls-2">
+                            Related Articles
+                        </div>
+                        <div class="article-card d-flex flex-column my-4">
+                            <div class="darkgray fs-1-9 ls-2 my-2">News 1</div>
+                            <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
+                            <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                                <p class="fs-2 hover-cc secondary">Find out more</p>
+                                <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
+                            </a>
+                        </div>
+                        <div class="article-card d-flex flex-column my-4">
+                            <div class="darkgray fs-1-9 ls-2 my-2">News 2</div>
+                            <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
+                            <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                                <p class="fs-2 hover-cc secondary">Find out more</p>
+                                <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
+                            </a>
+                        </div>
+                        <div class="article-card d-flex flex-column my-4">
+                            <div class="darkgray fs-1-9 ls-2 my-2"> News 3</div>
+                            <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
+                            <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                                <p class="fs-2 hover-cc secondary">Find out more</p>
+                                <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+              </div>
+          </div>
+
       </section>
     </main>
+
     <footer class="primary-bg">
       <div class="container">
         <div class="row">
