--- a/about-us.html
+++ b/about-us.html
@@ -37,7 +37,7 @@
             </a>
           </div>
           <div class="col-5">
-            <a href="./index.html">
+            <a href="#">
               <div class="image-wrapper logo">
                 <img
                   src="./assets/img/logo-w-text.webp"
@@ -66,7 +66,10 @@
             <div class="row">
               <div class="col-5">
                 <nav class="d-flex justify-content-between">
-                  <a href="#" class="primary hover-cc sub-primary">
+                  <a
+                    href="./about-us.html"
+                    class="primary hover-cc sub-primary"
+                  >
                     Haqqımızda
                   </a>
                   <a href="#" class="primary hover-cc sub-primary"> Əlaqə </a>
@@ -78,24 +81,24 @@
                     Xidmətlər
                   </a>
                   <div class="menu services d-flex" data-toggle="services-menu">
-                    <div class="col-4 gray-bg">
+                    <div class="col-4 lightgray-bg">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
                         <a
-                          href="#"
+                          href="./services-advisory.html"
                           class="primary hover-cc sub-act"
                           data-toggle="advisory-menu"
                           >Məsləhət Xidmətləri</a
                         >
                         <a
-                          href="#"
+                          href="./services-accountment.html"
                           class="primary hover-cc sub-act"
                           data-toggle="assurance-menu"
                           >Muhasibatlıq Xidmətləri</a
                         >
                         <a
-                          href="#"
+                          href="./services-tax.html"
                           class="primary hover-cc sub-act"
                           data-toggle="tax-menu"
                           >Vergi Xidmətləri</a
@@ -104,19 +107,21 @@
                     </div>
 
                     <div
-                      class="col-8 advisory-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 advisory-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Məsləhət xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-advisory-1.html"
+                            class="primary hover-cc"
                             >Xarici ticarət və gömrük xidmətləri</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -143,29 +148,33 @@
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="col-8 assurance-menu sub-menu lightgray-bg d-flex"
-                    >
-                      <div class="col-4">
+                    <div class="col-8 assurance-menu sub-menu gray-bg d-flex">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Muhasibatlıq xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-1.html"
+                            class="primary hover-cc"
                             >Muhasibat uçotunun aparılması üzrə autsors
                             xidməti</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-2.html"
+                            class="primary hover-cc"
                             >Maliyyə uçotunun aparılması üzrə autsors
                             xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-3.html"
+                            class="primary hover-cc"
                             >Şirkət rəhbərliyinə xərclər və gəlirlilik haqqında
                             hesabatların hazırlanması</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -192,29 +201,35 @@
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="col-8 tax-menu sub-menu lightgray-bg d-flex d-none"
-                    >
-                      <div class="col-4">
+                    <div class="col-8 tax-menu sub-menu gray-bg d-flex d-none">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Vergi xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-1.html"
+                            class="primary hover-cc"
                             >Vergi auditi xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-2.html"
+                            class="primary hover-cc"
                             >Vergi məsləhət xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-3.html"
+                            class="primary hover-cc"
                             >Vergi planlaması xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-4.html"
+                            class="primary hover-cc"
                             >Vergi sahəsində sair xidmətlər</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -254,7 +269,7 @@
                     class="menu industries d-flex"
                     data-toggle="services-menu"
                   >
-                    <div class="col-4 gray-bg">
+                    <div class="col-4 lightgray-bg">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
@@ -280,9 +295,9 @@
                     </div>
 
                     <div
-                      class="col-8 advisoryInd-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 advisoryInd-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -312,7 +327,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -340,9 +355,9 @@
                       </div>
                     </div>
                     <div
-                      class="col-8 assuranceInd-menu sub-menu lightgray-bg d-flex"
+                      class="col-8 assuranceInd-menu sub-menu gray-bg d-flex"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -372,7 +387,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -400,9 +415,9 @@
                       </div>
                     </div>
                     <div
-                      class="col-8 taxInd-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 taxInd-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -432,7 +447,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -491,10 +506,12 @@
                 class="white hover-cc fw-300 my-4 my-lg-0"
                 >Why FA Consulting</a
               >
-              <a href="#" class="white hover-cc fw-300 my-4 my-lg-0"
+              <a
+                href="./customers.html"
+                class="white hover-cc fw-300 my-4 my-lg-0"
                 >Müştərilərimiz</a
               >
-              <a href="#" class="white hover-cc fw-300 my-4 my-lg-0"
+              <a href="./team.html" class="white hover-cc fw-300 my-4 my-lg-0"
                 >Komandamız</a
               >
             </div>
@@ -614,17 +631,14 @@
               <p class="title fs-2-5 fw-600">Connect</p>
               <a href="#">Meet our people</a>
               <a href="#">Contact us</a>
-              <a href="#">Global reach</a>
             </div>
           </div>
           <div class="col-12 col-lg-2 desk-footer">
             <div class="link-wrapper">
               <p class="title fw-600">About</p>
-              <a href="#">About us</a>
+              <a href="./about-us.html">Haqqımızda</a>
               <a href="#">Careers</a>
-              <a href="#">Press</a>
-              <a href="#">Moders slavery statement</a>
-              <a href="#">GPPC</a>
+              <a href="#">Insights</a>
             </div>
           </div>
           <div class="col-12 col-lg-2 desk-footer">
@@ -633,8 +647,6 @@
               <a href="#">Privacy</a>
               <a href="#">Cookie policy</a>
               <a href="#">Disclaimer</a>
-              <a href="#">Site map</a>
-              <a href="#">Unauthorised trademark use</a>
             </div>
           </div>
           <div class="col-12 mobile-footer my-5">
