--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
             </a>
           </div>
           <div class="col-5">
-            <a href="./index.html">
+            <a href="#">
               <div class="image-wrapper logo">
                 <img
                   src="./assets/img/logo-w-text.webp"
@@ -65,7 +65,10 @@
             <div class="row">
               <div class="col-5">
                 <nav class="d-flex justify-content-between">
-                  <a href="#" class="primary hover-cc sub-primary">
+                  <a
+                    href="./about-us.html"
+                    class="primary hover-cc sub-primary"
+                  >
                     Haqqımızda
                   </a>
                   <a href="#" class="primary hover-cc sub-primary"> Əlaqə </a>
@@ -77,24 +80,24 @@
                     Xidmətlər
                   </a>
                   <div class="menu services d-flex" data-toggle="services-menu">
-                    <div class="col-4 gray-bg">
+                    <div class="col-4 lightgray-bg">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
                         <a
-                          href="#"
+                          href="./services-advisory.html"
                           class="primary hover-cc sub-act"
                           data-toggle="advisory-menu"
                           >Məsləhət Xidmətləri</a
                         >
                         <a
-                          href="#"
+                          href="./services-accountment.html"
                           class="primary hover-cc sub-act"
                           data-toggle="assurance-menu"
                           >Muhasibatlıq Xidmətləri</a
                         >
                         <a
-                          href="#"
+                          href="./services-tax.html"
                           class="primary hover-cc sub-act"
                           data-toggle="tax-menu"
                           >Vergi Xidmətləri</a
@@ -103,19 +106,21 @@
                     </div>
 
                     <div
-                      class="col-8 advisory-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 advisory-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Məsləhət xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-advisory-1.html"
+                            class="primary hover-cc"
                             >Xarici ticarət və gömrük xidmətləri</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -142,29 +147,33 @@
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="col-8 assurance-menu sub-menu lightgray-bg d-flex"
-                    >
-                      <div class="col-4">
+                    <div class="col-8 assurance-menu sub-menu gray-bg d-flex">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Muhasibatlıq xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-1.html"
+                            class="primary hover-cc"
                             >Muhasibat uçotunun aparılması üzrə autsors
                             xidməti</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-2.html"
+                            class="primary hover-cc"
                             >Maliyyə uçotunun aparılması üzrə autsors
                             xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-accountment-3.html"
+                            class="primary hover-cc"
                             >Şirkət rəhbərliyinə xərclər və gəlirlilik haqqında
                             hesabatların hazırlanması</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -191,29 +200,35 @@
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="col-8 tax-menu sub-menu lightgray-bg d-flex d-none"
-                    >
-                      <div class="col-4">
+                    <div class="col-8 tax-menu sub-menu gray-bg d-flex d-none">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
                           <p class="title">Vergi xidmətləri</p>
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-1.html"
+                            class="primary hover-cc"
                             >Vergi auditi xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-2.html"
+                            class="primary hover-cc"
                             >Vergi məsləhət xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-3.html"
+                            class="primary hover-cc"
                             >Vergi planlaması xidmətləri</a
                           >
-                          <a href="#" class="primary hover-cc"
+                          <a
+                            href="./services-tax-4.html"
+                            class="primary hover-cc"
                             >Vergi sahəsində sair xidmətlər</a
                           >
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -253,7 +268,7 @@
                     class="menu industries d-flex"
                     data-toggle="services-menu"
                   >
-                    <div class="col-4 gray-bg">
+                    <div class="col-4 lightgray-bg">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
@@ -279,9 +294,9 @@
                     </div>
 
                     <div
-                      class="col-8 advisoryInd-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 advisoryInd-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -311,7 +326,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -339,9 +354,9 @@
                       </div>
                     </div>
                     <div
-                      class="col-8 assuranceInd-menu sub-menu lightgray-bg d-flex"
+                      class="col-8 assuranceInd-menu sub-menu gray-bg d-flex"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -371,7 +386,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -399,9 +414,9 @@
                       </div>
                     </div>
                     <div
-                      class="col-8 taxInd-menu sub-menu lightgray-bg d-flex d-none"
+                      class="col-8 taxInd-menu sub-menu gray-bg d-flex d-none"
                     >
-                      <div class="col-4">
+                      <div class="col-6">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
@@ -431,7 +446,7 @@
                           <a href="#" class="primary hover-cc">Valuations</a>
                         </div>
                       </div>
-                      <div class="col-8 p-5 ms-5">
+                      <div class="col-6 p-5 ms-5">
                         <div class="main-card">
                           <div class="image-wrapper">
                             <img
@@ -555,6 +570,9 @@
                     <i class="fab fa-linkedin fs-2-5 white hover-cc-p"></i>
                   </a>
                 </div>
+                <div class="team-hover-info">
+                  <p class="fs-2-5 ls-2">Your Text Here Lorem Dolar Ipsum</p>
+                </div>
               </div>
             </div>
             <div class="col-12 col-lg-4">
@@ -574,6 +592,9 @@
                   <a href="#">
                     <i class="fab fa-linkedin fs-2-5 white hover-cc-p"></i>
                   </a>
+                </div>
+                <div class="team-hover-info">
+                  <p class="fs-2-5 ls-2">Your Text Here Lorem Dolar Ipsum</p>
                 </div>
               </div>
             </div>
@@ -595,6 +616,9 @@
                     <i class="fab fa-linkedin fs-2-5 white hover-cc-p"></i>
                   </a>
                 </div>
+                <div class="team-hover-info">
+                  <p class="fs-2-5 ls-2">Your Text Here Lorem Dolar Ipsum</p>
+                </div>
               </div>
             </div>
           </div>
@@ -609,17 +633,14 @@
               <p class="title fs-2-5 fw-600">Connect</p>
               <a href="#">Meet our people</a>
               <a href="#">Contact us</a>
-              <a href="#">Global reach</a>
             </div>
           </div>
           <div class="col-12 col-lg-2 desk-footer">
             <div class="link-wrapper">
               <p class="title fw-600">About</p>
-              <a href="#">About us</a>
+              <a href="./about-us.html">Haqqımızda</a>
               <a href="#">Careers</a>
-              <a href="#">Press</a>
-              <a href="#">Moders slavery statement</a>
-              <a href="#">GPPC</a>
+              <a href="#">Insights</a>
             </div>
           </div>
           <div class="col-12 col-lg-2 desk-footer">
@@ -628,8 +649,6 @@
               <a href="#">Privacy</a>
               <a href="#">Cookie policy</a>
               <a href="#">Disclaimer</a>
-              <a href="#">Site map</a>
-              <a href="#">Unauthorised trademark use</a>
             </div>
           </div>
           <div class="col-12 mobile-footer my-5">
