footer and side panel changes

--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                   Lorem is very fun and charming, if you can learn it you will
                   be victorious
                 </p>
-                <a class="btn-cont" href="#">
+                <a class="btn-cont" href="./student-career.html">
                   <button class="default-btn btn-w">
                     Unlock you potential now
                   </button>
@@ -837,7 +837,7 @@
                   Lorem is very fun and charming, if you can learn it you will
                   be victorious
                 </p>
-                <a class="btn-cont" href="#">
+                <a class="btn-cont" href="./student-career.html">
                   <button class="default-btn btn-r">
                     Fullfill your potential
                   </button>
@@ -888,7 +888,6 @@
               <div class="accardion-text d-flex flex-column">
                 <a href="#">Meet our people</a>
                 <a href="#">Contact us</a>
-                <a href="#">Global reach</a>
               </div>
             </div>
           </div>
@@ -906,9 +905,7 @@
               <div class="accardion-text d-flex flex-column">
                 <a href="#">About us</a>
                 <a href="#">Careers</a>
-                <a href="#">Press</a>
-                <a href="#">Moders slavery statement</a>
-                <a href="#">GPPC</a>
+                <a href="#">Insights</a>
               </div>
             </div>
           </div>
@@ -927,8 +924,6 @@
                 <a href="#">Privacy</a>
                 <a href="#">Cookie policy</a>
                 <a href="#">Disclaimer</a>
-                <a href="#">Site map</a>
-                <a href="#">Unauthorised trademark use</a>
               </div>
             </div>
           </div>
