--- a/careers.html
+++ b/careers.html
@@ -585,7 +585,6 @@
               <div class="accardion-text d-flex flex-column">
                 <a href="#">Meet our people</a>
                 <a href="#">Contact us</a>
-                <a href="#">Global reach</a>
               </div>
             </div>
           </div>
@@ -603,9 +602,7 @@
               <div class="accardion-text d-flex flex-column">
                 <a href="#">About us</a>
                 <a href="#">Careers</a>
-                <a href="#">Press</a>
-                <a href="#">Moders slavery statement</a>
-                <a href="#">GPPC</a>
+                <a href="#">Insights</a>
               </div>
             </div>
           </div>
@@ -624,8 +621,6 @@
                 <a href="#">Privacy</a>
                 <a href="#">Cookie policy</a>
                 <a href="#">Disclaimer</a>
-                <a href="#">Site map</a>
-                <a href="#">Unauthorised trademark use</a>
               </div>
             </div>
           </div>
