--- a/customers.html
+++ b/customers.html
@@ -699,7 +699,6 @@
               <div class="accardion-text d-flex flex-column">
                 <a href="#">Meet our people</a>
                 <a href="#">Contact us</a>
-                <a href="#">Global reach</a>
               </div>
             </div>
           </div>
@@ -717,9 +716,7 @@
               <div class="accardion-text d-flex flex-column">
                 <a href="#">About us</a>
                 <a href="#">Careers</a>
-                <a href="#">Press</a>
-                <a href="#">Moders slavery statement</a>
-                <a href="#">GPPC</a>
+                <a href="#">Insights</a>
               </div>
             </div>
           </div>
@@ -738,8 +735,6 @@
                 <a href="#">Privacy</a>
                 <a href="#">Cookie policy</a>
                 <a href="#">Disclaimer</a>
-                <a href="#">Site map</a>
-                <a href="#">Unauthorised trademark use</a>
               </div>
             </div>
           </div>
