--- a/services-accountment.html
+++ b/services-accountment.html
@@ -672,120 +672,114 @@
 
       </section>
     </main>
-
     <footer class="primary-bg">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-lg-2 desk-footer">
-              <div class="link-wrapper">
-                <p class="title fs-2-5 fw-600">Connect</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-2 desk-footer">
+            <div class="link-wrapper">
+              <p class="title fs-2-5 fw-600">Connect</p>
+              <a href="#">Meet our people</a>
+              <a href="#">Contact us</a>
+            </div>
+          </div>
+          <div class="col-12 col-lg-2 desk-footer">
+            <div class="link-wrapper">
+              <p class="title fw-600">About</p>
+              <a href="./about-us.html">Haqqımızda</a>
+              <a href="#">Careers</a>
+              <a href="#">Insights</a>
+            </div>
+          </div>
+          <div class="col-12 col-lg-2 desk-footer">
+            <div class="link-wrapper">
+              <p class="title fw-600">Legal</p>
+              <a href="#">Privacy</a>
+              <a href="#">Cookie policy</a>
+              <a href="#">Disclaimer</a>
+            </div>
+          </div>
+          <div class="col-12 mobile-footer my-5">
+            <div class="accardion px-5">
+              <div
+                class="accardion-title d-flex justify-content-between align-items-center"
+              >
+                <p>Connect</p>
+                <div class="accardion-icon-wrapper">
+                  <div class="top"></div>
+                  <div class="bot"></div>
+                </div>
+              </div>
+              <div class="accardion-text d-flex flex-column">
                 <a href="#">Meet our people</a>
                 <a href="#">Contact us</a>
               </div>
             </div>
-            <div class="col-12 col-lg-2 desk-footer">
-              <div class="link-wrapper">
-                <p class="title fw-600">About</p>
-                <a href="./about-us.html">Haqqımızda</a>
+          </div>
+          <div class="col-12 mobile-footer my-5">
+            <div class="accardion px-5">
+              <div
+                class="accardion-title d-flex justify-content-between align-items-center"
+              >
+                <p>About</p>
+                <div class="accardion-icon-wrapper">
+                  <div class="top"></div>
+                  <div class="bot"></div>
+                </div>
+              </div>
+              <div class="accardion-text d-flex flex-column">
+                <a href="#">About us</a>
                 <a href="#">Careers</a>
                 <a href="#">Insights</a>
               </div>
             </div>
-            <div class="col-12 col-lg-2 desk-footer">
-              <div class="link-wrapper">
-                <p class="title fw-600">Legal</p>
+          </div>
+          <div class="col-12 mobile-footer my-5">
+            <div class="accardion px-5">
+              <div
+                class="accardion-title d-flex justify-content-between align-items-center"
+              >
+                <p>LEGAL</p>
+                <div class="accardion-icon-wrapper">
+                  <div class="top"></div>
+                  <div class="bot"></div>
+                </div>
+              </div>
+              <div class="accardion-text d-flex flex-column">
                 <a href="#">Privacy</a>
                 <a href="#">Cookie policy</a>
                 <a href="#">Disclaimer</a>
               </div>
             </div>
-            <div class="col-12 mobile-footer my-5">
-              <div class="accardion px-5">
-                <div
-                  class="accardion-title d-flex justify-content-between align-items-center"
-                >
-                  <p>Connect</p>
-                  <div class="accardion-icon-wrapper">
-                    <div class="top"></div>
-                    <div class="bot"></div>
-                  </div>
-                </div>
-                <div class="accardion-text d-flex flex-column">
-                  <a href="#">Meet our people</a>
-                  <a href="#">Contact us</a>
-                  <a href="#">Global reach</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 mobile-footer my-5">
-              <div class="accardion px-5">
-                <div
-                  class="accardion-title d-flex justify-content-between align-items-center"
-                >
-                  <p>About</p>
-                  <div class="accardion-icon-wrapper">
-                    <div class="top"></div>
-                    <div class="bot"></div>
-                  </div>
-                </div>
-                <div class="accardion-text d-flex flex-column">
-                  <a href="#">About us</a>
-                  <a href="#">Careers</a>
-                  <a href="#">Press</a>
-                  <a href="#">Moders slavery statement</a>
-                  <a href="#">GPPC</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 mobile-footer my-5">
-              <div class="accardion px-5">
-                <div
-                  class="accardion-title d-flex justify-content-between align-items-center"
-                >
-                  <p>LEGAL</p>
-                  <div class="accardion-icon-wrapper">
-                    <div class="top"></div>
-                    <div class="bot"></div>
-                  </div>
-                </div>
-                <div class="accardion-text d-flex flex-column">
-                  <a href="#">Privacy</a>
-                  <a href="#">Cookie policy</a>
-                  <a href="#">Disclaimer</a>
-                  <a href="#">Site map</a>
-                  <a href="#">Unauthorised trademark use</a>
-                </div>
-              </div>
-            </div>
-            <div
-              class="col-12 col-lg-6 social-icons d-flex justify-content-around"
-            >
-              <a href="#">
-                <i class="fab fa-youtube"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </div>
-            <div class="col-12 footer-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-              deleniti debitis minima sapiente? Recusandae, magnam natus! Id nisi,
-              culpa fuga quasi rerum sed sunt enim aut magni voluptatibus nobis
-              nulla. Sint amet vero facilis. Asperiores iure at nihil, in
-              necessitatibus nesciunt? Iste exercitationem dignissimos,
-              praesentium perferendis accusamus facere alias accusantium, dolores
-              explicabo voluptas velit assumenda! Non cupiditate exercitationem a
-              quae.
-            </div>
+          </div>
+          <div
+            class="col-12 col-lg-6 social-icons d-flex justify-content-around"
+          >
+            <a href="#">
+              <i class="fab fa-youtube"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
+          <div class="col-12 footer-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+            deleniti debitis minima sapiente? Recusandae, magnam natus! Id nisi,
+            culpa fuga quasi rerum sed sunt enim aut magni voluptatibus nobis
+            nulla. Sint amet vero facilis. Asperiores iure at nihil, in
+            necessitatibus nesciunt? Iste exercitationem dignissimos,
+            praesentium perferendis accusamus facere alias accusantium, dolores
+            explicabo voluptas velit assumenda! Non cupiditate exercitationem a
+            quae.
           </div>
         </div>
-      </footer>
+      </div>
+    </footer>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
