--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 desk-nav">
+          <div class="col-6 desk-nav justify-content-end">
             <div class="icon-box d-flex justify-content-end align-items-center">
               <a href="#" class="hover-cc primary">
                 Find your local member firm
@@ -97,18 +97,17 @@
                           data-toggle="tax-menu"
                           >Vergi Xidmətləri</a
                         >
-
-                        <a
-                          href="./services-accountment.html"
-                          class="primary hover-cc sub-act"
-                          data-toggle="assurance-menu"
-                          >Muhasibatlıq Xidmətləri</a
-                        >
                         <a
                           href="./services-advisory.html"
                           class="primary hover-cc sub-act"
                           data-toggle="advisory-menu"
                           >Məsləhət Xidmətləri</a
+                        >
+                        <a
+                          href="./services-accountment.html"
+                          class="primary hover-cc sub-act"
+                          data-toggle="assurance-menu"
+                          >Muhasibatlıq Xidmətləri</a
                         >
 
                         <a
@@ -126,26 +125,26 @@
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
-                          <p class="title">Audit xidmətləri</p>
-                          <a
-                            href="./services-tax-1.html"
-                            class="primary hover-cc"
-                            >Maliyyə hesabatlarının auditi</a
-                          >
-                          <a
-                            href="./services-tax-2.html"
-                            class="primary hover-cc"
-                            >Nizamnamə kapitalının formalaşdırılmasın auditi</a
-                          >
+                          <p class="title mt-1">Audit xidmətləri</p>
                           <a
                             href="./services-tax-3.html"
                             class="primary hover-cc"
                             >Vergi hesabatlarının auditi</a
                           >
                           <a
+                            href="./services-tax-1.html"
+                            class="primary hover-cc"
+                            >Maliyyə hesabatlarının auditi</a
+                          >
+                          <a
                             href="./services-tax-4.html"
                             class="primary hover-cc"
                             >Əmlakın qiymətləndirilməsinin auditi</a
+                          >
+                          <a
+                            href="./services-tax-2.html"
+                            class="primary hover-cc"
+                            >Nizamnamə kapitalının formalaşdırılmasın auditi</a
                           >
                         </div>
                       </div>
@@ -181,7 +180,7 @@
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
-                          <p class="title">Vergi xidmətləri</p>
+                          <p class="title mt-1">Vergi xidmətləri</p>
                           <a
                             href="./services-tax-1.html"
                             class="primary hover-cc"
@@ -236,17 +235,18 @@
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
-                          <p class="title">Muhasibatlıq xidmətləri</p>
-                          <a
-                            href="./services-accountment-1.html"
-                            class="primary hover-cc"
-                            >Muhasibat uçotunun üzrə autsors xidməti</a
-                          >
+                          <p class="title mt-1">Muhasibatlıq xidmətləri</p>
                           <a
                             href="./services-accountment-2.html"
                             class="primary hover-cc"
                             >Maliyyə uçotunun üzrə autsors xidmətləri</a
                           >
+                          <a
+                            href="./services-accountment-1.html"
+                            class="primary hover-cc"
+                            >Muhasibat uçotunun üzrə autsors xidməti</a
+                          >
+
                           <a
                             href="./services-accountment-3.html"
                             class="primary hover-cc"
@@ -685,7 +685,8 @@
       <section id="info-firm">
         <div class="container-fluid px-0">
           <div class="row mx-0 px-0">
-            <div class="col-12 col-md-6 firm-image p-5">
+            <div class="col-12 col-md-6 firm-image p-5 pos-rel">
+              <div class="firm-overlay"></div>
               <p>What is trending?</p>
               <div class="text-wrapper">
                 <span>IFRS</span>
