--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                       >
                         <a
                           href="./services-tax.html"
-                          class="primary hover-cc sub-act"
+                          class="primary hover-cc sub-act mt-3"
                           data-toggle="audit-menu"
                           >Audit Xidmətləri</a
                         >
@@ -307,7 +307,7 @@
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
-                        <a href="#" class="primary hover-cc"
+                        <a href="#" class="primary hover-cc mt-3"
                           >Xəstəxanalar və hospitallar</a
                         >
                         <a href="#" class="primary hover-cc">Hotel və Turizm</a>
